tictactoe/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictactoe-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tictactoe
  template:
    metadata:
      labels:
        app: tictactoe
    spec:
      containers:
        - name: tictactoe-container
          image: ghcr.io/smiggiddy/odin-codeprojects/tictactoe:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-service
spec:
  selector:
    app: tictactoe
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
